@@ -434,14 +434,22 @@ esac
 check_status() {
     status=ok
     signal=0
-    if test $1 = 127; then status=invcmd
-    elif test $1 = 0; then status=ok
-    elif test $1 -lt 127; then status=error; errcode=$1
-    elif test $1 = 143 -o $1 = 137; then status=timeout
-    else status=signal; signal=$(($1 - 128))
+    if test $1 = 127; then 
+	status=invcmd
+	echo "(Invalid command)" >&2
+    elif test $1 = 0; then 
+	status=ok
+	echo "(Program terminated with no error)" >&2
+    elif test $1 -lt 127; then 
+        status=error; errcode=$1
+	echo "(Program terminated with status code $errcode)" >&2
+    elif test $1 = 143 -o $1 = 137; then 
+	status=timeout
+	echo "(Program interrupted due to timeout)" >&2
+    else 
+	status=signal; signal=$(($1 - 128))
+	echo "(Program received signal $signal)" >&2
     fi
-    if test $status = signal; then echo "Terminated with signal $signal" >&2; fi
-    if test $status = error; then echo "Terminated with status code $errcode" >&2; fi
 
     # Bailout if invalid command or command was interrupted (SIGINT = 2).
     if test $status = invcmd; then exit $1; fi
@@ -589,7 +597,7 @@ do_run() {
   else
       printf '' >"$baseout.out"
       while read -a vars ; do
-	  echo "===== RUNNING PROGRAM: ${vars[*]} =====" >>"$baseout.log"
+	  { echo; echo "===== RUNNING PROGRAM: ${vars[*]} ====="; } >>"$baseout.log"
 	  varstuff=("${vars[@]}" ${RUN_ARGS:+"${RUN_ARGS[@]}"} "${extra_run_args[@]}")
 	  varstuff=("${varstuff[@]//TEST/$testsrc}")
 	  command=("$timeout" "$runner" -t "$baseout.x" "${varstuff[@]}")
@@ -611,13 +619,13 @@ do_diff() {
   refout=$2
 
   if test $fail = 1 -o $dorun = 0 -o $dodiff = 0; then
-    echo "Not testing output." >>"$baseout.log"
+    echo "(Not checking output)" >>"$baseout.log"
     place_chars $offset 37 "-"
   else
-      echo "===== CHECKING OUTPUT =====" >>"$baseout.log"
+      { echo; echo "===== CHECKING OUTPUT ====="; } >>"$baseout.log"
       echo "diff -u $refout $baseout.out" >>"$baseout.log"
       if diff -u "$refout" "$baseout.out" >>"$baseout.log" 2>&1; then
-	  echo "Output identical to reference" >>"$baseout.log"
+	  echo "(Output identical to reference)" >>"$baseout.log"
 	  if xfail D; then char=?; color=31; fail=1; else char=D; color=32; fi
       else
 	  if xfail D; then char="/"; color=33; else char=X; color=31; fail=1; fi
